fixed css: overlapping buttons

--- a/openvidu-call-react/src/components/chat/ChatComponent.css
+++ b/openvidu-call-react/src/components/chat/ChatComponent.css
@@ -1,8 +1,9 @@
 #chatContainer {
     position: absolute;
     z-index: 0;
-    width: 100%;
+    width: 90%;
     height: 100%;
+    right: 3rem;
   }
 
   #chatToolbar {
